crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__double_star_comprehension.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/double_star_comprehension.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..358,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 122..147,
                    value: DictComp(
                        ExprDictComp {
                            node_index: NodeIndex(None),
                            range: 122..147,
                            key: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 125..126,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 128..129,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 130..146,
                                    node_index: NodeIndex(None),
                                    target: Tuple(
                                        ExprTuple {
                                            node_index: NodeIndex(None),
                                            range: 134..138,
                                            elts: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 134..135,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 137..138,
                                                        id: Name("y"),
                                                        ctx: Store,
                                                    },
                                                ),
                                            ],
                                            ctx: Store,
                                            parenthesized: false,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 142..146,
                                            id: Name("data"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # it's actually a comprehension.
3 |
4 | {**x: y for x, y in data}
  | ^^^^ Syntax Error: Starred expression cannot be used here
5 |
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |
